# visimpl

./: .gitignore  .gitlab-ci.yml  .gitsubprojects  .stackviz.desktop  .visimpl.desktop  CMakeLists.txt  Changelog.md  LICENSE.txt  README.md  visimpl.desktop
.docker/: Dockerfile_nvidia-ubuntu-16.04  Dockerfile_ubuntu-16.04  avahi-daemon.conf  simpart.sh  stackviz.sh  visimpl.sh
CMake/: CPackConfig.cmake  FindEigen3.cmake  FindZeroMQ.cmake  FindnvidiaOpenGL.cmake
examplesh5/: CMakeLists.txt  simData.cpp  testh5.cpp
importers/: CMakeLists.txt  gdf2csv.cpp  hdf52csv.cpp  hdf52hdf5.cpp  txt2csv.cpp
qrc/: resources.qrc
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  OpenGLWidget.cpp  OpenGLWidget.h  SimulationPlayer.cpp  SimulationPlayer.h  SimulationSummaryWidget.cpp  SimulationSummaryWidget.h  viewer.cpp
src/EditorTF/: ColorPoints.cpp  ColorPoints.h  Gradient.h  TransferFunctionEditor.cpp  TransferFunctionEditor.h
src/prefr/: ColorEmissionNode.cpp  ColorEmissionNode.h  ColorOperationPrototype.cpp  ColorOperationPrototype.h  CompositeColorEmitter.cpp  CompositeColorEmitter.h  CompositeColorUpdater.h  DirectValuedEmissionNode.cpp  DirectValuedEmitter.cpp  DirectValuedEmitter.h  DirectValuedUpdater.cpp  DirectValuedUpdater.h
src/qt/: CustomSlider.h
stackviz/: CMakeLists.txt  DisplayManager.cpp  DisplayManager.h  DisplayManagerWidget.cpp  DisplayManagerWidget.h  MainWindow.cpp  MainWindow.h  log.h  resources.qrc  stackviz.cpp  stackviz.ui  stackvizWinProps.rc.in  visimpl.icns
sumrice/: CMakeLists.txt  CloseDataDialog.cpp  CloseDataDialog.h  ColorInterpolator.cpp  ColorInterpolator.h  ConfigureRESTDialog.cpp  ConfigureRESTDialog.h  ConnectRESTDialog.cpp  ConnectRESTDialog.h  CorrelationComputer.cpp  CorrelationComputer.h  CustomSlider.h  DataInspector.cpp  DataInspector.h  DisplayManagerWidget.cpp  DisplayManagerWidget.h  EventWidget.cpp  EventWidget.h  FocusFrame.cpp  FocusFrame.h  H5Activity.cpp  H5Activity.h  H5Network.cpp  H5Network.h  Histogram.cpp  Histogram.h  LoaderThread.cpp  LoaderThread.h  LoadingDialog.cpp  LoadingDialog.h  ParticleSizeWidget.cpp  ParticleSizeWidget.h  ReconnectRESTDialog.cpp  ReconnectRESTDialog.h  SimulationData.cpp  SimulationData.h  SimulationPlayer.cpp  SimulationPlayer.h  StackViz.cpp  StackViz.h  (+12 more)
sumrice/EditorTF/: ColorPoints.cpp  ColorPoints.h  Gradient.cpp  Gradient.h  TransferFunctionEditor.cpp  TransferFunctionEditor.h
sumrice/qt/: ParticleSizeWidget.cpp  ParticleSizeWidget.h  TransferFunctionWidget.cpp  TransferFunctionWidget.h
tests/: CMakeLists.txt  visimpl_test_utils.cpp  visimpl_test_utils.h
tests/ReTo/: CMakeLists.txt  camera.cpp  model.cpp  reto_test_data.in  shader_program.cpp  spline.cpp
tests/plab/: CMakeLists.txt  cluster.cpp
tests/scoop/: CMakeLists.txt  color.cpp  color_palette.cpp
tests/sumrice/: CMakeLists.txt  color_interpolator.cpp
tests/visimpl/: CMakeLists.txt  domain_manager.cpp
ui/: mainwindow.ui  stackviz.ui  visimpl.ui
visimpl/: CMakeLists.txt  CShader.cpp  CShader.h  DomainManager.cpp  DomainManager.h  ExceptionUtils.cpp  ExceptionUtils.h  GlewInitializer.cpp  GlewInitializer.h  InputMultiplexer.cpp  InputMultiplexer.h  MainWindow.cpp  MainWindow.h  OldDomainManager.cpp  OldDomainManager.h  OpenGLWidget.cpp  OpenGLWidget.h  SaveScreenshotDialog.cpp  SaveScreenshotDialog.h  SaveScreenshotDialog.ui  SelectionManagerWidget.cpp  SelectionManagerWidget.h  SimulationPlayer.h  SubsetImporter.cpp  SubsetImporter.h  VisualGroup.cpp  VisualGroup.h  resources.qrc  types.h  visimpl.cpp  visimpl.ui  visimplWinProps.rc.in
visimpl/particlelab/: NeuronParticle.cpp  NeuronParticle.h  ParticleLabShaders.h  StaticGradientModel.cpp  StaticGradientModel.h
visimpl/prefr/: ColorEmissionNode.cpp  ColorEmissionNode.h  ColorOperationModel.cpp  ColorOperationModel.h  ColorSource.cpp  ColorSource.h  CompositeColorEmitter.cpp  CompositeColorEmitter.h  CompositeColorUpdater.cpp  CompositeColorUpdater.h  DirectValuedEmissionNode.cpp  DirectValuedEmissionNode.h  DirectValuedEmitter.cpp  DirectValuedUpdater.cpp  PrefrShaders.h  SourceMultiPosition.cpp  SourceMultiPosition.h  UpdaterStaticPosition.cpp  UpdaterStaticPosition.h  ValuedSource.cpp  ValuedSource.h  ValuedUpdater.cpp  ValuedUpdater.h
visimpl/render/: Plane.cpp  Plane.h
visimpl/stackviz/: DisplayManagerWidget.cpp  DisplayManagerWidget.h  StackViz.cpp  StackViz.h  StackVizGui.ui
visimpl/ui/: DataInspector.cpp  DataInspector.h
